added header style

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,3 +6,9 @@
 Header a {
     text-decoration: none;
 }
+
+
+.Header__not-logged-in, .Header__logged-in {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
