--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,13 @@
+header, body{
+  font-family: 'Caveat', cursive;
+}
+
 header {
   background-color: blueviolet;
+}
+
+h2 {
+  font-size: 40px;
 }
 
 .App {
@@ -10,3 +18,8 @@ header {
 .App a:visited{color:black}
 .App a:hover {color: white}
 .App a:active {color:white}
+
+.sign-up-form {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
