--- a/src/components/UserRule/UserRule.css
+++ b/src/components/UserRule/UserRule.css
@@ -4,15 +4,21 @@
 
 .rule .icons {
     position: absolute;
-    top: 25px;
-    right: 300px;
+    top: 5px;
+    right: 10%;
     left: auto;
 }
 
 .rule {
+    padding-top: 10px;
+    background-color: #D3D3D3;
     margin-right: 5%;
     margin-left: 5%;
     margin-bottom: 30px;
     position: relative;
-    border: 1px solid orange;
+    border-radius: 15px;
+    border-top: #ccc 1px solid;
+    border-right: #ccc 1px solid;
+    border-bottom: #777 1px solid;
+    border-left: #777 1px solid;
 }
