--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,31 @@ h2 {
   font-size: 40px;
 }
 
+button {
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+  font-size: 20px;
+  letter-spacing: 2px;
+  padding: 25px 80px;
+  text-transform: uppercase;
+  cursor: pointer;
+  display: inline-block;
+  margin: 15px 30px;
+/* animate and time the transitions*/
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+button:hover {
+  background-color: white;
+  color: black;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
 .App {
   text-align: center;
 }
