--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,10 @@
+html, body, .App, main, .GamesRulesPage, .content { height:100%; }
+
 header, h2, h3{
   font-family: 'Caveat', cursive;
 }
 
-header {
+header, .Sidebar {
   background-color: blueviolet;
 }
 
