--- a/src/routes/GameRulesPage/GameRulesPage.css
+++ b/src/routes/GameRulesPage/GameRulesPage.css
@@ -10,8 +10,13 @@
     flex: 2;
 }
 
-.sidebar {
-    height: 100%;
+.Sidebar {
+    border-right: 1px solid black;
+}
+
+.Sidebar button {
+    padding: 25px 40px;
+    margin: 10px 10px;
 }
 
 @media all and (min-width: 800px) {
