--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -54,3 +54,15 @@ button:hover {
 }
 
 .click-icon:hover {cursor: pointer;}
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .App{
+  padding-top: 10px;
+}
