--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,8 +2,12 @@ header, button, h2, h3, h4{
   font-family: 'Caveat', cursive;
 }
 
-header, .Sidebar {
+header, footer, .Sidebar {
   background-color: #555380;
+}
+
+footer{
+  padding: 10px;
 }
 
 h2 {
@@ -12,6 +16,10 @@ h2 {
 
 h4 {
   font-size: 25px;
+}
+
+header {
+  z-index: 1;
 }
 
 button {
@@ -63,6 +71,6 @@ button:hover {
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .App{
-  padding-top: 10px;
+.sticky + main{
+  padding-top: 100px;
 }
