all style implimented

--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -10,6 +10,9 @@ span {
     justify-content: space-evenly;
     flex-direction: column;
 }
+.bullet img {
+    margin-top: 10px;
+}
 
 @media all and (min-width: 800px) {
     .container {
