--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -12,6 +12,12 @@ span {
 }
 .bullet img {
     margin-top: 10px;
+    margin-left: 10px;
+}
+
+.bullet p {
+    text-align: left;
+    padding-left: 5px;
 }
 
 @media all and (min-width: 800px) {
