--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -63,6 +63,11 @@ button:hover {
 
 .click-icon:hover {cursor: pointer;}
 
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
 /* The sticky class is added to the header with JS when it reaches its scroll position */
 .sticky {
   position: fixed;
@@ -73,8 +78,4 @@ button:hover {
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + main{
   padding-top: 100px;
-}
-
-footer {
-  height: 75px;
 }
