--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,3 +6,9 @@ footer {
 footer p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+
+@media all and (min-width: 800px) {
+    footer {
+        margin-top: 0px;
+    }
+}
