--- a/src/components/UserRule/UserRule.css
+++ b/src/components/UserRule/UserRule.css
@@ -39,3 +39,10 @@
     box-sizing: border-box;
     resize: vertical;
 }
+
+@media all and (min-width: 800px) {
+    .rule {
+        margin-right: 15%;
+        margin-left: 15%;
+    }
+}
