--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,8 +25,8 @@ header {
 
 button {
   background: transparent;
-  color: white;
-  border: 2px solid white;
+  color: black;
+  border: 2px solid black;
   font-size: 20px;
   letter-spacing: 2px;
   padding: 25px 80px;
@@ -41,8 +41,8 @@ button {
 }
 
 button:hover {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   -webkit-transition: all 0.4s;
   -moz-transition: all 0.4s;
   transition: all 0.4s;
@@ -52,10 +52,15 @@ button:hover {
   text-align: center;
 }
 
-.App a:link {color: white}
-.App a:visited{color:white}
-.App a:hover {color: #57FF73}
-.App a:active {color:#57FF73}
+.App header a:link {color: white}
+.App header a:visited{color:white}
+.App header a:hover {color: #57FF73}
+.App header a:active {color:#57FF73}
+
+.App main a:link {color: black}
+.App main a:visited{color:black}
+.App main a:hover {color: #000357}
+.App main a:active {color: #000357}
 
 .sign-up-form {
   font-family: Arial, Helvetica, sans-serif;
